RESOLVED FIXED Bug 83863
Should clear an invalid string in a date field on blur
https://bugs.webkit.org/show_bug.cgi?id=83863
Summary Should clear an invalid string in a date field on blur
Kent Tamura
Reported 2012-04-12 23:26:55 PDT
Should clear an invalid string in a date field on blur Suppose a page has a date field. data:text/html,<input type=date> Focus on it, type "aaa" into it then focus on another part. Expected: The field clears the invalid input "aaa" like <input type=number>. Actual: "aaa" remains though the IDL attribute 'value' returns an empty string.
Attachments
Patch (4.26 KB, patch)
2012-04-13 00:20 PDT, Kent Tamura
haraken: review+
Kent Tamura
Comment 1 2012-04-13 00:20:48 PDT
Kentaro Hara
Comment 2 2012-04-13 00:23:39 PDT
Comment on attachment 137051 [details] Patch Makes sense.
Kent Tamura
Comment 3 2012-04-13 00:35:57 PDT
Note You need to log in before you can comment on or make changes to this bug.