Should clear an invalid string in a date field on blur https://bugs.webkit.org/show_bug.cgi?id=83863

Reviewed by Kentaro Hara.

Source/WebCore:

Test: fast/forms/date/input-date-commit-valid-only.html

* html/DateInputType.cpp:
(WebCore::DateInputType::handleBlurEvent):
Reset the visible value. The code is same as NumberInputType::handleBlurEvent().

LayoutTests:

* fast/forms/date/input-date-commit-valid-only-expected.txt: Added.
* fast/forms/date/input-date-commit-valid-only.html: Added.

Canonical link: https://commits.webkit.org/101374@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114092 268f45cc-cd09-0410-ab3c-d52691b4dbfc